increased header font size

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     left: 0;
     right: 0;
     height: 60px;
-    display: flex;
+    font-size: 1.8em;
     align-items: center;
     background-color: #1976d2;
     color: white;
