added buttons; layout; styling

--- a/src/app/components/simple-calculator/simple-calculator.component.html
+++ b/src/app/components/simple-calculator/simple-calculator.component.html
@@ -1,3 +1,26 @@
 <div class="simple-calc-container">
-  <mc-button></mc-button>
+  <div class="display"></div>
+  <div class="extras"></div>
+
+  <div class="square one"><mc-button>1</mc-button></div>
+  <div class="square two"><mc-button>2</mc-button></div>
+  <div class="square three"><mc-button>3</mc-button></div>
+  <div class="square four"><mc-button>4</mc-button></div>
+  <div class="square five"><mc-button>5</mc-button></div>
+  <div class="square six"><mc-button>6</mc-button></div>
+  <div class="square seven"><mc-button>7</mc-button></div>
+  <div class="square eight"><mc-button>8</mc-button></div>
+  <div class="square nine"><mc-button>9</mc-button></div>
+  <div class="square zero"><mc-button>0</mc-button></div>
+  <div class="square double-zero"><mc-button>00</mc-button></div>
+
+  <div class="square plus"><mc-button>+</mc-button></div>
+  <div class="square minus"><mc-button>-</mc-button></div>
+  <div class="square divide"><mc-button>/</mc-button></div>
+  <div class="square multiply"><mc-button>*</mc-button></div>
+  
+  <div class="square clear"><mc-button>CE</mc-button></div>
+  <div class="square erase"><mc-button>⬅</mc-button></div>
+  <div class="square point"><mc-button>.</mc-button></div>
+  <div class="vertical-double equal"><mc-button>=</mc-button></div>
 </div>
