added display component; added font

--- a/src/app/components/simple-calculator/simple-calculator.component.html
+++ b/src/app/components/simple-calculator/simple-calculator.component.html
@@ -1,5 +1,7 @@
 <div class="simple-calc-container">
-  <div class="display"></div>
+  <div class="display">
+      <mc-display></mc-display>
+  </div>
   <div class="extras"></div>
 
   <div class="square one"><mc-button>1</mc-button></div>
