--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url("https://fonts.googleapis.com/css2?family=Revalia&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nova+Round&display=swap");
 html {
   overflow: hidden;
 }
@@ -7,7 +8,9 @@ html,
 body {
   height: 100%;
 }
-
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding-top: 60px;
