--- a/src/app/components/display/display.component.scss
+++ b/src/app/components/display/display.component.scss
@@ -10,5 +10,6 @@
   border-radius: 6px;
   padding: 0 0.3em;
   color: #193d06;
-    text-shadow: 0px 0 6px green;
+  text-shadow: 0px 0 6px green;
+  overflow: hidden;
 }
