added state using ngxs; added secondary display

--- a/src/app/components/simple-calculator/simple-calculator.component.html
+++ b/src/app/components/simple-calculator/simple-calculator.component.html
@@ -1,6 +1,9 @@
 <div class="simple-calc-container">
   <div class="display">
-    <mc-display>{{currentInput}}</mc-display>
+    <mc-display>
+      <span main>{{ currentValue$ | async }}</span>
+      <span secondary>{{ currentValue$ | async }}</span>
+    </mc-display>
   </div>
   <div class="extras"></div>
 
