--- a/src/app/components/display/display.component.html
+++ b/src/app/components/display/display.component.html
@@ -1,3 +1,8 @@
 <div class="display-container">
-    <ng-content></ng-content>
+  <div class="secondary">
+    <ng-content select="[secondary]"></ng-content>
+  </div>
+  <div class="main">
+    <ng-content select="[main]"></ng-content>
+  </div>
 </div>
