--- a/src/app/components/display/display.component.scss
+++ b/src/app/components/display/display.component.scss
@@ -1,15 +1,28 @@
 .display-container {
   height: 100%;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  font-size: 3.5em;
-  font-family: "Revalia", cursive;
+  // outline: 1px solid red;
+  display: block;
+  text-align: right;
+
+  // align-items: center;
+  // justify-content: flex-end;
+
   border: 1px solid gray;
   border-radius: 6px;
   padding: 0 0.3em;
   color: #193d06;
   text-shadow: 0px 0 6px green;
   overflow: hidden;
+
+  font-family: "Revalia", cursive;
+  .main {
+    height: 70%;
+    font-size: 3em;
+    // margin-top: -.5em;
+  }
+  .secondary {
+    height: 30%;
+    font-size: 1em;
+  }
 }
