--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,7 @@ body {
   padding-top: 60px;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.mat-typography {
+  font: 400 14px Roboto, "Helvetica Neue", sans-serif;
+}
