--- a/src/app/components/simple-calculator/simple-calculator.component.html
+++ b/src/app/components/simple-calculator/simple-calculator.component.html
@@ -8,62 +8,62 @@
   <div class="extras"></div>
 
   <div class="square one">
-    <mc-button (buttonPressed)="numberPressed(1)">1</mc-button>
+    <mc-button (buttonPressed)="buttonPressed(1)">1</mc-button>
   </div>
   <div class="square two">
-    <mc-button (buttonPressed)="numberPressed('2')">2</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('2')">2</mc-button>
   </div>
   <div class="square three">
-    <mc-button (buttonPressed)="numberPressed('3')">3</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('3')">3</mc-button>
   </div>
   <div class="square four">
-    <mc-button (buttonPressed)="numberPressed('4')">4</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('4')">4</mc-button>
   </div>
   <div class="square five">
-    <mc-button (buttonPressed)="numberPressed('5')">5</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('5')">5</mc-button>
   </div>
   <div class="square six">
-    <mc-button (buttonPressed)="numberPressed('6')">6</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('6')">6</mc-button>
   </div>
   <div class="square seven">
-    <mc-button (buttonPressed)="numberPressed('7')">7</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('7')">7</mc-button>
   </div>
   <div class="square eight">
-    <mc-button (buttonPressed)="numberPressed('8')">8</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('8')">8</mc-button>
   </div>
   <div class="square nine">
-    <mc-button (buttonPressed)="numberPressed('9')">9</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('9')">9</mc-button>
   </div>
   <div class="square zero">
-    <mc-button (buttonPressed)="numberPressed('0')">0</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('0')">0</mc-button>
   </div>
   <div class="square double-zero">
-    <mc-button (buttonPressed)="numberPressed('00')">00</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('00')">00</mc-button>
   </div>
   <div class="square point">
-    <mc-button (buttonPressed)="numberPressed('.')">.</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('.')">.</mc-button>
   </div>
 
   <div class="square plus">
-    <mc-button (buttonPressed)="operatorPressed('+')">+</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('+')">+</mc-button>
   </div>
   <div class="square minus">
-    <mc-button (buttonPressed)="operatorPressed('-')">-</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('-')">-</mc-button>
   </div>
   <div class="square divide">
-    <mc-button (buttonPressed)="operatorPressed('/')">/</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('/')">/</mc-button>
   </div>
   <div class="square multiply">
-    <mc-button (buttonPressed)="operatorPressed('*')">*</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('*')">*</mc-button>
   </div>
 
   <div class="square clear">
-    <mc-button (buttonPressed)="actionPressed('CE')">CE</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('CE')">CE</mc-button>
   </div>
   <div class="square erase">
-    <mc-button (buttonPressed)="actionPressed('B')">⬅</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('B')">⬅</mc-button>
   </div>
   <div class="vertical-double equal">
-    <mc-button (buttonPressed)="actionPressed('=')">=</mc-button>
+    <mc-button (buttonPressed)="buttonPressed('=')">=</mc-button>
   </div>
 </div>
